--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
     <body>
         <h1>Day_1 introduction</h1>
         <h2>Day_2 Github and Vscode Practicals</h2>
+        <h3>Day_3 Basics of HTML</h3>
     </body>
 </html>
