--- a/product.html
+++ b/product.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
 <html>
-    <h1>This is the product page</h1>
+    <header>Product</header>
+    <h1>this is product page</h1>
 </html>
